# ProteoForge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codspeed.yml  docs.yml  publish.yml
assets/: .gitkeep
benchmarks/: test_smoke.py
docs/: clustering.md  config.md  correction.md  discordance.md  index.md  io.md  normalization.md  prepare.md  prepared-dataset.md
scripts/: build_pi0_gcv_spline_constants.py
src/proteoforge/: __init__.py  __main__.py  _cluster.py  _config.py  _correction.py  _discordance.py  _exceptions.py  _layout.py  _normalize.py  _progress.py  _proteoform.py  _stats.py  _validate.py  _weights.py  cluster.py  discordance.py  fixture.py  prepare.py  schema.py  types.py
src/proteoforge/clustering/: __init__.py  _cuts.py  _distance.py  _linkage.py  _profiles.py  _protocol.py  _silhouette.py
src/proteoforge/constants/: __init__.py  pi0_gcv_spline.npz
src/proteoforge/correction/: __init__.py  _adjust.py  _hommel.py  _methods.py
src/proteoforge/correction/ihw/: __init__.py  _adjust.py  _convex.py  _grenander.py  _internal.py  _lp.py  _splitting.py  _utils.py  _weights.py
src/proteoforge/correction/qvalue/: __init__.py  _adjust.py  _gcv.py  _pi0.py
src/proteoforge/intel/parser/: fasta.py
src/proteoforge/io/: __init__.py  _design.py  _fasta.py  _harmonize.py  _ingest.py  _peptides.py  _provenance.py
src/proteoforge/models/: __init__.py  _fit_status.py  _protocol.py  _rlm.py  _wls.py
src/proteoforge/schemas/: config.schema.json
tests/: README.md  conftest.py  generate_fixtures.py  test_cluster_core.py  test_cluster_handoff.py  test_cluster_integration.py  test_cluster_release.py  test_cluster_results.py  test_config.py  test_correction.py  test_correction_adjust.py  test_correction_constants.py  test_correction_ihw.py  test_correction_qvalue.py  test_discordance.py  test_fit_status.py  test_fixture.py  test_golden_normalize.py  test_handoff.py  test_intel_parser_fasta.py  test_io_design.py  test_io_fasta.py  test_io_peptides.py  test_io_provenance.py  test_layout.py  test_main.py  test_models_init.py  test_models_rlm.py  test_models_wls.py  test_no_runtime_scipy.py  test_normalize.py  test_progress.py  test_proteoform.py  test_shape_equivalence.py  test_stats.py  test_types.py  test_validate.py  test_version.py  test_weights.py
tests/fixtures/: minimal.fasta  minimal_config.yaml  minimal_design.csv  minimal_long.parquet  minimal_mapped.csv
tools/: zebrac
tools/compare/: README.md  _shared.py  diff_outputs.py  run_proteoforge.py  run_reference.py  summarize.py  validate.sh  zebrac.sh
tools/compare/validation/: README.md  test_parity.py
