[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "proteoforge"
dynamic = ["version"]
description = "Differential proteoform discovery for bottom-up proteomics"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Enes Kemal Ergin" }]
keywords = ["proteomics", "mass-spectrometry", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "numba>=0.61",
    "numpy>=2.2",
    "polars>=1.26",
    "pyyaml>=6.0.2",
    "tqdm>=4.67",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.10"]
interactive = ["plotly>=6.0", "ipywidgets>=8.1"]
cli = ["rich>=14.0", "typer>=0.15"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.6", "mkdocstrings>=0.29", "mkdocstrings-python>=1.16"]
ref = [
    "pandas>=2.2",
    "pyarrow>=18.0",
    "scipy>=1.15",
    "statsmodels>=0.14",
    "tqdm>=4.67",
]

[dependency-groups]
dev = [
    "hypothesis>=6.135",
    "mypy>=1.16",
    "nox>=2025.5.0",
    "pandas>=2.2",
    "pre-commit>=4.2",
    "pyyaml>=6.0.2",
    "types-PyYAML>=6.0.12",
    "types-tqdm>=4.67",
    "pytest-codspeed>=5.0",
    "pytest-cov>=6.1",
    "pytest>=8.4",
    "ruff>=0.11",
    "scikit-learn>=1.6",
    "scipy>=1.15",
    "statsmodels>=0.14",
    "tqdm>=4.67",
]
ref = [
    "pandas>=2.2",
    "pyarrow>=18.0",
    "scipy>=1.15",
    "statsmodels>=0.14",
    "tqdm>=4.67",
]

[project.scripts]
proteoforge = "proteoforge.__main__:main"

[project.urls]
Homepage = "https://github.com/eneskemalergin/ProteoForge"
Documentation = "https://github.com/eneskemalergin/ProteoForge#readme"
Repository = "https://github.com/eneskemalergin/ProteoForge"
Issues = "https://github.com/eneskemalergin/ProteoForge/issues"
Changelog = "https://github.com/eneskemalergin/ProteoForge/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.3"

[tool.hatch.build.hooks.vcs]
version-file = "src/proteoforge/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/proteoforge"]

[tool.hatch.build.targets.wheel.force-include]
"src/proteoforge/constants/pi0_gcv_spline.npz" = "proteoforge/constants/pi0_gcv_spline.npz"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/scripts",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = [
  "src",
  "tests",
  "noxfile.py",
]
exclude = ["src/proteoforge/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "PTH", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/test_progress.py" = ["TC002"]
"src/proteoforge/correction/qvalue/_gcv.py" = ["E501", "SIM108", "SIM109"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["proteoforge"]
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["proteoforge._version"]
ignore_errors = true

# numba: no py.typed stubs
[[tool.mypy.overrides]]
module = ["numba", "numba.*"]
ignore_missing_imports = true

# njit kernels: untyped-decorator and no-any-return only inside @njit bodies
[[tool.mypy.overrides]]
module = [
    "proteoforge.clustering._linkage",
    "proteoforge.clustering._distance",
    "proteoforge.clustering._silhouette",
    "proteoforge.clustering._cuts",
    "proteoforge.correction._methods",
    "proteoforge.correction._hommel",
    "proteoforge.correction.qvalue._gcv",
    "proteoforge.correction.ihw._grenander",
    "proteoforge.correction.ihw._lp",
    "proteoforge.correction.ihw._splitting",
]
disable_error_code = ["untyped-decorator", "no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-markers", "--strict-config"]

[tool.coverage.run]
branch = true
source = ["proteoforge"]
omit = [
    "src/proteoforge/_version.py",
    # numba JIT modules: omit from coverage (oracles cover behavior)
    "src/proteoforge/clustering/_distance.py",
    "src/proteoforge/clustering/_linkage.py",
    "src/proteoforge/clustering/_silhouette.py",
    "src/proteoforge/clustering/_cuts.py",
    "src/proteoforge/correction/_methods.py",
    "src/proteoforge/correction/_hommel.py",
    "src/proteoforge/correction/qvalue/_gcv.py",
    "src/proteoforge/correction/ihw/_grenander.py",
    "src/proteoforge/correction/ihw/_lp.py",
    "src/proteoforge/correction/ihw/_splitting.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.codespell]
skip = ".git,.venv,uv.lock,dist,build,site,.nox,htmlcov"
ignore-words-list = "crate,ser"
